# sKnock

./: DEPENDENCIES  README  README.md  setup_pythonpath.sh
client/: ClientInterface.py  __init__.py  knock-client.py  requirements.txt  version.py
client/certificates/: devclient.pfx  devserver.cer
client/modules/: Connection.py  Security.py
common/: constants.py  synchronized.py
common/definitions/: Constants.py  Exceptions.py
common/modules/: CertUtil.py  CryptoEngine.py  Utils.py
contrib/: simnet-clean.sh  simnet.sh
contrib/ca/: .gitignore  Makefile  README.md
data/certificates/: devca.crl  devclient2.cer  devclient3.cer  devclient4.cer
doc/: installation_guide.fodt
evaluation/: start.py
evaluation/client_eval_framework/: config.py  evaluation.py  knock_client
evaluation/firewall_processing_performance/: fw_pp_eval_client.py  fw_pp_eval_server.py
evaluation/helper/: sync_time.sh  test-client.py  test-server.py  test_client.py  test_client_calibration.py  test_server.py
evaluation/knock_overhead/: ko_eval_client.py  (+2 more)
knock_client/: __init__.py  devserver.cer  knock-client.py  requirements.txt
knock_common/: requirements.txt
knock_server/: __init__.py  config.ini  devserver.pfx  knock-server.py  requirements.txt
lib/: .gitignore  AUTHORS  Makefile  Makefile.am  configure.ac  knock.c  knock.h  test.c
lib/testdir/: hello.py
server/: ServerBenchmark.py  ServerInterface.py  config.ini  knock-server.py  requirements.txt  version.py
tests/: configurations.py  stubs.py  test_certUtil.py  test_cryptoEngine.py  test_processRequest.py
(+121 files in other folders)
